changed email at the top header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Trusted partner in global trade, mobility, construction & wholesale</p>
             <div class="top-bar__contacts">
                 <a href="tel:+0000000000"><i class="fa-solid fa-phone"></i> +237650200804/682450546</a>
-                <a href="mailto:info@kingschoice.com"><i class="fa-solid fa-envelope"></i> kingschoice@gmail.com</a>
+                <a href="mailto:info@kingschoice.com"><i class="fa-solid fa-envelope"></i> choicekings45@gmail.com</a>
             </div>
         </div>
     </header>
