--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
                 <div>
                     <p class="eyebrow">Contact</p>
                     <h2>Let’s discuss your next move.</h2>
-                    <p>Address placeholder • Douala, Cameroon</p>
-                    <p><strong>Phone:</strong> +00 000 0000</p>
-                    <p><strong>Email:</strong> info@kingschoice.com</p>
+                    <p>Address placeholder • Newbell, Douala, Cameroon</p>
+                    <p><strong>Phone:</strong> +237650200804/682450546</p>
+                    <p><strong>Email:</strong> choicekings45@gmail.com</p>
                     <div class="map-placeholder">Google Maps Embed Placeholder</div>
                 </div>
                 <form class="form-card" aria-label="Contact form" action="https://formsubmit.co/choicekings45@gmail.com" method="POST">
